[package]
name = "gbt-quantile"
version = "0.1.0"
edition = "2021"
description = "Pure-Rust gradient-boosted trees with quantile regression. First GBT crate with pinball loss, early stopping, and JSON-serializable models."
license = "MIT OR Apache-2.0"
repository = "https://github.com/p-vbordei/gbt-quantile"
keywords = ["machine-learning", "gradient-boosting", "quantile-regression", "decision-tree", "forecasting"]
categories = ["science", "algorithms"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
